<resources>
    <string name="app_name">Googoosha</string>
    <string name="splash_text">Find your\nPerfect match\nToday</string>
    <string name="to_auth">Login</string>
    <string name="to_signup">Sign up</string>
    <string name="welcome">Welcome back</string>
    <string name="enter_to_continue">Sign in continue</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="or">or</string>
    <string name="signup_with_facebook">Sign up with Facebook</string>
    <string name="register_with_vk">Register with Vk</string>
    <string name="register_with_google">Register with Google</string>
    <string name="policy">Terms of use &amp; Privecy Policy</string>
    <string name="to_create_account">Create an account</string>
    <string name="create_account_to_continue">Create account to continue</string>
    <string name="email_address">Email Address</string>
    <string name="repeat_password">Re enter Password</string>
    <string name="if_signup">by Sign up you are agree with our</string>
    <string name="terms_of_use">terms &amp; condition of use</string>
    <string name="already_have_account">Already gave account?</string>
    <string name="login">login</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="profile_example">Jayson Moama, 34</string>
    <string name="location_example">San Francisco, USA</string>
    <string name="subscribers">Followers</string>
    <string name="subscriptions">Follow</string>
    <string name="favourites">Favorites</string>
    <string name="interesting">Interested</string>
    <string name="info">About</string>
    <string name="gallery">Gallery</string>
    <string name="to_save">Save</string>
    <string name="el_address">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="born_date">Date of birth</string>
    <string name="message">Message</string>
    <string name="to_find">Discover</string>
    <string name="notifications">Notifications</string>
    <string name="request_for_compliance">Match Request</string>
    <string name="to_accept">Accept</string>
    <string name="enter_message_there">Enter Message here</string>
    <string name="vip_status">VIP status</string>
    <string name="vip_title">Discover the full functionality with a VIP subscription:</string>
    <string name="vip_text">Registration of your profile with a spectacular VIP sign in search results, lists of friends, guests and in your profile.\n\nFilter incoming messages: from VIP users, questionnaires with photos, selection by country of residence and age!\n\nAutomatic raising of your profile to the first place of search results by country and city every two days!\n\nVIP-search by interests, character, preferences, physique, financial status and other important parameters!\n\nUnlimited number of ratings + 5, likes without borders, invisibility, the ability to write to everyone without restrictions.</string>
    <string name="connect_vip">Connect VIP</string>
    <string name="help">Help</string>
    <string name="safety">Safety</string>
    <string name="guide_for_beginners">Beginner\'s Guide</string>
    <string name="friendship_chatting">Friendship, correspondence, ignore</string>
    <string name="replenishment_balance">Replenishment of coins balance</string>
    <string name="services">Services and additional services</string>
    <string name="profile_settings">Profile settings</string>
    <string name="photos">Photos</string>
    <string name="site_rules">Site rules</string>
    <string name="user_agreement">Terms of use</string>
    <string name="about_app">About the application</string>
    <string name="about_password">All about passwords</string>
    <string name="binding_phone">Linking a mobile number and mail to the profile</string>
    <string name="about_hacking">About profile hacking</string>
    <string name="hacking_pincodes">Lure of PIN-codes of payment cards, requests to replenish the account</string>
    <string name="sending_sms">Requests to send SMS to short numbers</string>
    <string name="about_phones">About phone numbers</string>
    <string name="general_recommendations">General recommendations</string>
    <string name="connections_history">Connection history</string>
    <string name="text_about_passwords">If your password is a combination of numbers (1234, 3333, 1122…), date of birth (1985, 01041988, 2204…), your phone number, or your password repeats your nickname, then consider that your profile has already been stolen! A strong password must be at least 6 characters long and contain both letters and numbers. Example: 3u4YY34, gh37cdmA, 38927kLh, 2104oLeg77 Set up your password recovery mode. Menu - Settings - Password recovery: - Password recovery by phone number. Convenient way. When recovering your password, you must enter your mobile number in international format and the year of birth (not the date). The change code will be sent to your mobile. - Password recovery via email. An easy way with an added safety factor. The recovery code will be sent to your mail, the password for which only you know. - Password recovery on the security question on the phone. If someone else has access to your mobile except you, we recommend using SMS recovery using a security question. Without answering the question, the password change code will not be sent. At least one of the recovery methods must be enabled. To avoid possible difficulties in further changing / recovering the password of the profile, we recommend that you do not ignore the password recovery item by e-mail. If your mobile number, which you used for activation, has changed, link the new number to the questionnaire. You can always change your password in your profile settings. None of the users of the application can see your phone number and email.</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="color_theme">Color theme</string>
    <string name="persone_data">Personal data</string>
    <string name="name_edit">Name modification</string>
    <string name="city_edit">Changing the city</string>
    <string name="password_edit">Changing the password</string>
    <string name="phone_edit">Changing the phone</string>
    <string name="recovery_password">Password Recovery</string>
    <string name="lasts_list">List of recent</string>
    <string name="verify_address">Confirmation of the postal address</string>
    <string name="notifications_settings">Setting up Notifications</string>
    <string name="notifications_to_email">Email Alerts</string>
    <string name="name_change">Name change</string>
    <string name="your_name">Your name:</string>
    <string name="your_name_text">Izzatullo</string>
    <string name="save_data">Save data</string>
    <string name="city_change">City change</string>
    <string name="your_city">Your city:</string>
    <string name="your_city_text">Tashkent</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password:</string>
    <string name="new_password_text">      </string>
    <string name="repeat_new_password">Repeat new password:</string>
    <string name="repeat_new_password_text">        </string>
    <string name="four_last_digits_of_the_phone">4 last digits of the phone</string>
    <string name="four_last_digits_of_the_phone_text">          </string>
    <string name="phone_change">Phone change</string>
    <string name="sms_code">SMS code:</string>
    <string name="sms_code_text">          </string>
    <string name="next">Next</string>
    <string name="password_recovery">Password recovery</string>
    <string name="phone_number">Enter phone number</string>
    <string name="phone_number_text">         </string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="connection_list">Connection list</string>
    <string name="today">today</string>
    <string name="current">current</string>
    <string name="numbers1">37.110.210.00</string>
    <string name="october_18">October 18</string>
    <string name="numbers2">84.110.210.0</string>
    <string name="offline">offline</string>
    <string name="april_24">April 24</string>
    <string name="numbers3">95.110.210.0</string>
    <string name="application_active">When the application is active</string>
    <string name="application_inactive">When the application is inactive</string>
    <string name="notification_settings">Settings</string>
    <string name="time">Time:</string>
    <string name="around_the_clock">Around the clock</string>
    <string name="sound">Sound:</string>
    <string name="special">Special</string>
    <string name="messages">Messages:</string>
    <string name="likes">Likes:</string>
    <string name="events">Events:</string>
    <string name="system">System:</string>
    <string name="deleting_profile">Deleting a profile</string>
    <string name="deleting_profile_text">After confirmation of the request for deletion Your profile will be instantly deleted from Googoosha Apps</string>
    <string name="delete_profile">Delete profile</string>
    <string name="to_filter_incoming_messages">Filter incoming messages</string>
    <string name="delete_questionnaire">Deleting the questionnaire</string>
    <string name="with_possibility_recovering">With the possibility of recovery</string>
    <string name="gifts">Shop</string>
    <string name="your_balance">Your balance: 150</string>
    <string name="to_replenish">Top up</string>
    <string name="exit">Log out</string>
    <string name="coincidence">Congrats it\'s a Mathc</string>
    <string name="to_send_message">Send Message</string>
    <string name="contionue_play">Keep playing</string>
    <string name="start_chatting">Start conversation now to each other</string>
    <string name="its_coincidence">Congrats it’s a Match</string>
    <string name="info_example">Hello I am Samira freelance designer from san fransisco,LA. I am living in usa for last 10 years and doing my jobs</string>
    <string name="interested">interested</string>
    <string name="films">Films</string>
    <string name="travel">Travelling</string>
    <string name="food">Foods</string>
    <string name="filters">Filters</string>
    <string name="to_clear">Clear</string>
    <string name="type">Type</string>
    <string name="flowers">Flowers</string>
    <string name="price">Cost</string>
    <string name="for_who_gift">Who needs a gift for?</string>
    <string name="man">Men</string>
    <string name="women">Women</string>
    <string name="childrens">Childrens</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="purpose_of_acquaintance">Purpose of acquaintance:</string>
    <string name="love_and_relationship">love and relationship</string>
    <string name="family_status">Family status:</string>
    <string name="unmarried">unmarried</string>
    <string name="married">married</string>
    <string name="to_save_edits">Save Change</string>
    <string name="distance">Distance</string>
    <string name="distance_metres">10m - 2km</string>
    <string name="notifications_sound">Notification Sound</string>
    <string name="age">Age</string>
    <string name="ages">18 - 99 years old</string>
    <string name="friends">Friends</string>
    <string name="guests">Guests</string>
    <string name="intersted_in">Interested in</string>
    <string name="sympathy">Sympathy</string>
    <string name="friendship">Friendship and fellowship</string>
    <string name="flirt">Flirt</string>
    <string name="relationship">Relationship without obligation</string>
    <string name="maarriage">Marriage and starting a family</string>
    <string name="virtual">Virtual relationship</string>
</resources>