<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_gradient"
    android:orientation="vertical"
    tools:context=".screens.MenuFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="200dp"/>

    <TextView
        style="@style/screen_title"
        android:text="@string/profile_example"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/gilroy_medium"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/your_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coin"
            android:layout_marginStart="8dp"/>

        <TextView
            android:fontFamily="@font/gilroy_medium"
            android:layout_marginStart="16dp"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:text="@string/to_replenish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>